# GPR-300-01-Intermediate-Graphics-JM

./: CMakeLists.txt  DirectXExe.lnk  README.md  imgui.ini
DirectXPurgatory/DirectXPurgatory/: DirectXPurgatory.vcxproj  DirectXPurgatory.vcxproj.filters  app.cpp  app.h  main.cpp  renderslop.cpp  renderslop.h  stdafx.h  timer.cpp
DirectXPurgatory/DirectXPurgatory/x64/Debug/: DirectXPurgatory.exe.recipe  DirectXPurgatory.ilk  vc143.idb
DirectXPurgatory/DirectXPurgatory/x64/Debug/DirectXPurgatory.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  DirectXPurgatory.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
libs/: CMakeLists.txt
libs/DirectX12/: CMakeLists.txt
libs/SDL3/include/SDL3/: SDL.h
shaders/: DSPixelShader.hlsl  DSVertexShader.hlsl  PPPixelShader.hlsl  PPVertexShader.hlsl  PixelShader.hlsl  VertexShader.hlsl
source/: DirectXPurgatory.sln
source/DirectXPurgatory/: DirectXPurgatory.vcxproj  DirectXPurgatory.vcxproj.filters  VertexShader.hlsl  gconst.h  renderslop.cpp  renderslop.h
src/: CMakeLists.txt  PixelShader.hlsl  app.cpp  app.h  gconst.h  main.cpp  pipelinestateobject.cpp  pipelinestateobject.h  renderassets.cpp  renderassets.h  renderer.cpp  renderer.h  renderslop.cpp  renderslop.h  rendertexture.cpp  rendertexture.h  resourcemanager.cpp  resourcemanager.h  shader.cpp  shader.h  texturemanager.cpp  texturemanager.h  timer.h
